feat(docs): added more docs and updated devenv
