# backend/api.yaml
@@ -71,6 +71,11 @@ paths:
           schema:
             type: integer 
             minimum: 1
+        - name: search
+          in: query
+          required: false
+          schema:
+            type: string
       responses:
         '200':
           description: A list of Contacts
@@ -112,7 +117,11 @@ paths:
           schema:
             type: integer
             minimum: 1
-
+        - name: search
+          in: query
+          required: false
+          schema:
+            type: string
       responses:
         '200':
           description: A list of Directory Entries
